# tei-news

./: .gitignore  .translate_cache.json  .vercelignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TEISALE-CHANGESET.md  WORKFLOW-OPTIMIZATION.md  audit-dashboard.html  carbon-plate-cae-simulator.html  fetch_news.ps1  index.html  ren-shops.json  teisale-prototype.html  vercel-build.sh  vercel.json
.claude/: settings.json
.claude/agents/: README.md  pc-cleaner.md  projflow-backend.md  website-audit-seo.md
.claude/commands/: audit.md  pc-clean.md
.claude/hooks/: check-completion-report.sh  session-start-reminder.sh
.claude/skills/verify-done/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: update-news.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
auction/: index.html  manifest.json
cf3d_analyzer/: README.md  __init__.py  __main__.py  carbon_fiber.py  geometry.py  gui.py  ingest.py  manufacturability.py  moldflow.py  multiview.py  pipeline.py  ply_explode.py  process_advisor.py  pyproject.toml  reconstruct3d.py  report.py  start.bat  start.sh  step_parser.py  tolerance.py  viewer3d.py  watcher.py
cf3d_analyzer/cli/: main.py
cf3d_analyzer/data/: __init__.py  process_kb.py
cf3d_analyzer/examples/: sample_part.dxf  sample_part.stp
cf3d_analyzer/tests/: test_pipeline.py
cf3d_analyzer/web/: server.py
cf3d_analyzer/web/static/: app.js  index.html  style.css  viewer.js
cf3d_analyzer/windows/: 0_studio.bat  1_install.bat  2_gui.bat  3_analyze.bat  4_watch.bat  5_open_folders.bat  6_run_tests.bat  README_WINDOWS.txt
migrations/: 2026-05-28-teisale-assistant-shipping-contacts.sql  2026-06-11-ontime-schema.sql  2026-06-11-teitime-schema.sql
ontime/: README.md  index.html  manifest.webmanifest  sw.js
salesys/: SYNC_PROJFLOW.md  TEISALE-CHANGESET.md  audit-dashboard.html  index.html  sprint.html  vercel.json
salesys/migrations/: 2026-05-28-teisale-assistant-shipping-contacts.sql  2026-06-08-teisale-contact-industry-region.sql
sysclean/: AGENT-GUIDE.md  HANDOFF-kai-bridge.md  README.md  agent-bridge.ps1  clean.ps1  cloud-agent.ps1  config.json  control-panel.ps1  doctor.ps1  get.ps1  go.ps1  install.ps1  make-plan.ps1  plan.sample.json  quick-tune.ps1  remote-setup.ps1  report-template.html  scan.ps1  一鍵保養.bat  一鍵健檢.bat  一鍵面板.bat  安裝.bat
teipmsys/: PROJFLOW_HANDOFF.md  RTM_HANDOFF.md  index.html
teitime/: README.md  index.html  manifest.webmanifest  sw.js
zh-TW/: index.html
